--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -81,7 +81,7 @@
             <a href="#" data-toggle="popover" data-trigger="focus" title="Get all locations" data-content="Geo codes each posts of each profile of sets via OSM nominatim API." data-placement="top" class="info fa fa-info-circle"></a><br>
           </div>
           <br>
-          <input style="margin-bottom:5px;background-color:#a1d6e2;border-color:#a1d6e2;" value="Get sets data" type="button" class="btn btn-secondary" id="getSetDataBtn">
+          <input style="margin-bottom:5px;width:40%;" value="Get sets data" type="button" class="btn btn-primary" id="getSetDataBtn">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
           <div id="countera" class="stats-totals"></div><br>
           <div id="counterb" class="stats-totals"></div><br>
