--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -13,7 +13,7 @@
 <body style="background: aliceblue">
 <!--<button class="twitrbtn" onclick="openNav()">&#9776; tw</button>-->
 <div id="app" class="flex flex-column">
-  <main style="background-color: #dbe7f3; border-radius: 100px;" class="login container">
+  <main style="background-color: #d1f2fa75; border-radius: 100px;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
         <%include ./logo-mini.ejs%>
