--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -167,21 +167,15 @@
             </span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#loctag-tab" style="display:inline;">Location|Tag</a>
+            <a class="nav-link" data-toggle="tab" href="#location-tab" style="display:inline;">Location</a>
             <span style="display:inline;">
-              <a href="#" data-toggle="popover" data-trigger="focus" title="Instagram location and hashtag ops" data-content="ETL and/or API browsing operations for desired Instagram hashtag or location. Returns posts related to either hashtag or location input by user." data-placement="top" class="info fa fa-info-circle"></a>
+              <a href="#" data-toggle="popover" data-trigger="focus" title="Instagram location ops" data-content="ETL and/or API browsing operations for desired Instagram location. Returns posts related to location input by user." data-placement="top" class="info fa fa-info-circle"></a>
             </span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#seta-tab" style="display:inline;">Set A</a>
+            <a class="nav-link" data-toggle="tab" href="#hashtag-tab" style="display:inline;">Hashtag</a>
             <span style="display:inline;">
-              <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set A members input." data-placement="top" class="info fa fa-info-circle"></a>
-            </span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#setb-tab" style="display:inline;">Set B</a>
-            <span style="display:inline;">
-               <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input." data-placement="top" class="info fa fa-info-circle"></a>
+              <a href="#" data-toggle="popover" data-trigger="focus" title="Instagram hashtag ops" data-content="ETL and/or API browsing operations for desired Instagram hashtag. Returns posts related to  hashtag input by user." data-placement="top" class="info fa fa-info-circle"></a>
             </span>
           </li>
           <li class="nav-item">
@@ -238,32 +232,19 @@
             <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="/instagram/comments?" call-type="post-comments">Comments</button>
             <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets post comments" data-placement="top" class="info fa fa-info-circle"></a>
           </div>
-          <div style="max-width:45vw" class="tab-pane container widget-stage" id="loctag-tab">
+          <div style="max-width:45vw" class="tab-pane container widget-stage" id="location-tab">
             <br>
-            <input style="display:inline" placeholder="Tag..." type="text" class="form-control" id="tag-input" tag="tag">
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Post tag" data-placement="top" class="info fa fa-info-circle"></a>
-            <button style="display:inline" class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Tag posts</button>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Get posts by tag" data-placement="top" class="info fa fa-info-circle"></a><br>
             <input type="text" placeholder="Location..." class="form-control" id="location-input" location="location" style="display: inline;">
             <a href="#" data-toggle="popover" data-trigger="focus" title="Location" data-content="Posts by location" data-placement="top" class="info fa fa-info-circle"></a>
             <button style="display:inline" class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="/instagram/location?" call-type="location-posts">Location posts</button>
             <a href="#" data-toggle="popover" data-trigger="focus" title="Location" data-content="Get posts by location" data-placement="top" class="info fa fa-info-circle"></a>
           </div>
-          <div style="max-width:45vw" class="tab-pane container widget-stage" id="seta-tab">
+          <div style="max-width:45vw" class="tab-pane container widget-stage" id="hashtag-tab">
             <br>
-
-            <input id="resetSeta" value="Reset set" type="button" class="btn btn-secondary reset-btn">
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This part represents set A members input." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
-            <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-          </div>
-          <div style="max-width:45vw" class="tab-pane container widget-stage" id="setb-tab">
-            <br>
-            <input id="resetSetb" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary reset-btn">
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
-            <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em;" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-
+            <input style="display:inline" placeholder="Hashtag..." type="text" class="form-control" id="tag-input" tag="tag">
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Post tag" data-placement="top" class="info fa fa-info-circle"></a>
+            <button style="display:inline" class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Tag posts</button>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Get posts by tag" data-placement="top" class="info fa fa-info-circle"></a><br>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="search-tab">
             <br>
