--- a/src/views/pages/dashboards-explore.ejs
+++ b/src/views/pages/dashboards-explore.ejs
@@ -19,17 +19,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="../">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             viewBox="76.39 132.243 15.35 22" width="20" height="20" fill="#777">
-          <defs>
-            <path id="a"
-                  d="M88.31 136.63c.29-.28.43-.63.43-1.05 0-.41-.14-.76-.43-1.04-.08-.09-.78-.78-.86-.87-.29-.28-.64-.43-1.05-.43-.41 0-.76.15-1.05.43-.75.75-6.78 6.77-7.53 7.53-.29.28-.43.63-.43 1.04 0 .42.14.76.43 1.05.75.75 6.78 6.77 7.53 7.53.29.28.64.42 1.05.42.41 0 .76-.14 1.05-.42.08-.09.78-.78.86-.87.29-.29.43-.63.43-1.04 0-.41-.14-.76-.43-1.05-.37-.38-2.24-2.25-5.61-5.61 3.37-3.37 5.24-5.24 5.61-5.62z" />
-          </defs>
-          <use xlink:href="#a" />
-          <use xlink:href="#a" />
-        </svg>
-      </a>
+<!--      <a class="navbar-brand" href="../">-->
+<!--        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"-->
+<!--             viewBox="76.39 132.243 15.35 22" width="20" height="20" fill="#777">-->
+<!--          <defs>-->
+<!--            <path id="a"-->
+<!--                  d="M88.31 136.63c.29-.28.43-.63.43-1.05 0-.41-.14-.76-.43-1.04-.08-.09-.78-.78-.86-.87-.29-.28-.64-.43-1.05-.43-.41 0-.76.15-1.05.43-.75.75-6.78 6.77-7.53 7.53-.29.28-.43.63-.43 1.04 0 .42.14.76.43 1.05.75.75 6.78 6.77 7.53 7.53.29.28.64.42 1.05.42.41 0 .76-.14 1.05-.42.08-.09.78-.78.86-.87.29-.29.43-.63.43-1.04 0-.41-.14-.76-.43-1.05-.37-.38-2.24-2.25-5.61-5.61 3.37-3.37 5.24-5.24 5.61-5.62z" />-->
+<!--          </defs>-->
+<!--          <use xlink:href="#a" />-->
+<!--          <use xlink:href="#a" />-->
+<!--        </svg>-->
+<!--      </a>-->
       <a class="navbar-brand" href="/home?username=<%=username%>">Socialytics &raquo; Explore</a>
     </div>
     <div class="navbar-collapse">
