--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -110,12 +110,14 @@
 
               <div style="max-width:26vw;margin-left:-7%;" class="tab-pane container widget-stage" id="setb-tab">
                 <a style="display:inline;float:right;margin-right: 53%;margin-top: 6%;" href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="info fa fa-info-circle" ></a>
-                <textarea style="padding:5px; margin:5px;display: inline" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea><br>
+                <textarea style="padding:5px; margin:5px;display: inline" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea>
                 <input id="resetSetb" value="Reset set" type="button" class="btn btn-secondary reset-btn">
                 <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="display: inline;float: right;margin-right: 78%;margin-top: -4%;"></a>
               </div>
             </div>
           </div>
+          <br>
+          <br>
           <br>
           <input  style="width:40%; display:inline;margin:5px;padding:10px" placeholder="Count limit" type="number" class="form-control" id="count-input" count=0>
           <span><a href="#" data-toggle="popover" data-trigger="focus" title="Returned records upper limit" data-content="For Instagram ETL and browsing operations which do not present -ALL- on their title, limit the count of returned records by setting this parameter." data-placement="top" class="info fa fa-info-circle"></a></span><br>
