-Fine tuning text processing request / response

--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -24,6 +24,7 @@
 
     <div id="countera" class="stats-totals"></div>
     <div id="counterb" class="stats-totals"></div>
+    <input id="textProcBtn" style="text-align:center;display:inline-block; padding:5px; margin:10px; min-width:25%" value="Text Processing..." type="button" class="btn btn-primary hidden" call-type="form-data">
   </div>
 </div>
 
