--- a/public/css/style.css
+++ b/public/css/style.css
@@ -675,10 +675,11 @@ img {
   font-size: 1em;
 }*/
 .etl-badge{
-  background-color:white;
+  background-color:#31a9b8;
   color:#007bff;
   border-radius:50%;
   margin-left:10px;
+  margin-top:-2px;
   width:25px;
   height:25px;
   vertical-align: middle;
