- Fixed issues in home page.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,7 +34,7 @@ a:focus {
 
 .button-primary {
   padding: 0.6em 1.2em;
-  background: #1995ad;
+  background: #31a9b8;
   color: #ffffff;
   border: none;
   border-radius: 50px;
