--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -29,10 +29,10 @@
             <input style="cursor:pointer;" class="block" type="email" id="email" name="email" placeholder="email" autocomplete="email">
             <input class="block form-control" type="password" id="password" name="password" placeholder="password">
           </fieldset>
-          <button style="cursor:pointer;background-color: #31a9b8;" type="submit" id="login" class="button button-primary block signup">
+          <button style="cursor:pointer;" type="submit" id="login" class="button button-primary block signup">
             Login to socialytics
           </button>
-          <a href="/registration" style="cursor:pointer;background-color: #31a9b8;" id="registration" class="button button-primary block signup">
+          <a href="/registration" style="cursor:pointer;" id="registration" class="button button-primary block signup">
            Signup
           </a>
           <div id="login-error"style="text-align:center; color:darkred; font-size: 1em;"></div>
