--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -165,19 +165,19 @@
               <div style="background-color:#2f4554" class="byline-counter">
 
                   <span class="byline" title="Posts count"
-                        onClick=getEndpointData("/instagram/posts?","recent-posts","","posts")><span id="self-posts-count" class="fa fa-instagram"></span></span>
+                        onClick=getEndpointData("/instagram/posts?","recent-posts","<%=username%>","posts")><span id="self-posts-count" class="fa fa-instagram"></span></span>
 
               </div>
               <div style="background-color:#bda29a" class="byline-counter">
 
                   <span class="byline" title="Followers count"
-                        onClick=getEndpointData("/instagram/followers?","user-followers","","followers")><span id="self-followers-count" class="fa fa-users"></span></span>
+                        onClick=getEndpointData("/instagram/followers?","user-followers","<%=username%>","followers")><span id="self-followers-count" class="fa fa-users"></span></span>
 
               </div>
               <div style="background-color:#ca8622" class="byline-counter">
 
                   <span class="byline" title="Followings count"
-                        onClick=getEndpointData("/instagram/following?","user-following","","following")><span id="self-following-count" class="fa fa-user"></span></span>
+                        onClick=getEndpointData("/instagram/following?","user-following","<%=username%>","following")><span id="self-following-count" class="fa fa-user"></span></span>
 
               </div>
 
