--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -148,15 +148,15 @@
               <div id="self-bio"></div>
 
             </div>
-            <div style="margin-left:33%;">
+            <div style="margin-left:30%;">
 
-              <button id="sugg-post-btn" style="height: 33px;min-width: 88%;" class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="/instagram/suggested/posts?" call-type="sugg-posts">Sugg posts</button>
+              <button id="sugg-post-btn" style="height: 33px;min-width: 121px;" class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="/instagram/suggested/posts?" call-type="sugg-posts">Expolre</button>
               <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets suggested posts related to current logged in user profile." data-placement="top" class="info fa fa-info-circle"></a><br >
-              <button id="sugg-people-btn" style="height: 33px;min-width: 88%;" class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="/instagram/suggested/people?"  call-type="sugg-people">Sugg people</button>
+              <button id="sugg-people-btn" style="height: 33px;min-width: 121px;" class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="/instagram/suggested/people?"  call-type="sugg-people">People</button>
               <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets suggested people related to current logged in user profile." data-placement="top" class="info fa fa-info-circle"></a><br >
-              <button id="recent-feed-btn" style="height: 33px;min-width: 88%;" class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="/instagram/feed?" call-type="feed-posts">Recent feed</button>
+              <button id="recent-feed-btn" style="height: 33px;min-width: 121px;" class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="/instagram/feed?" call-type="feed-posts">Feed</button>
               <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets feed related to current logged in user profile." data-placement="top" class="info fa fa-info-circle"></a><br >
-              <button id="all-feed-btn" style="height: 33px;min-width: 88%;" class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="/instagram/allfeed?" call-type="all-feed-posts">All feed</button>
+              <button id="all-feed-btn" style="height: 33px;min-width: 121px;" class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="/instagram/allfeed?" call-type="all-feed-posts">All feed</button>
               <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets all feeds related to current logged in user profile." data-placement="top" class="info fa fa-info-circle"></a>
 
             </div>
