--- a/src/views/pages/sidepanel.ejs
+++ b/src/views/pages/sidepanel.ejs
@@ -1,5 +1,6 @@
 <div class="sidepanel" id="social-sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('social-sidepanel')">&times;</a>
+  <a href="javascript:void(0)" id="maximMinimBtn" onclick="maximMinimNav('social-sidepanel')" class="fa fa-window-maximize"></a>
   <a href="javascript:void(0)" value="" style="display:none" id="backbtn" class="fa fa-arrow-left backbtn" onclick="backNav()"></a>
   <div id="instagram-container">
     <div class="loader loader--style1" title="0">
